# VK-screen-space-probe

./: .gitignore  CMakeLists.txt  README.md
assets/sponza/: sponza.gltf
base/: VulkanRaytracingSample.cpp  VulkanRaytracingSample.h  VulkanglTFModel.cpp
examples/: CMakeLists.txt
examples/pathtracing/: pathtracing.cpp
examples/ssprobe/: ssprobe.cpp
shaders/glsl/: compileshaders.py
shaders/glsl/base/: textoverlay.frag.spv  textoverlay.vert.spv  uioverlay.frag.spv  uioverlay.vert.spv
shaders/glsl/pathtracing/: anyhit.rahit.spv  bufferreferences.glsl  closesthit.rchit  closesthit.rchit.spv  common.glsl  miss.rmiss  miss.rmiss.spv  raygen.rgen  raygen.rgen.spv  shadow.rchit  shadow.rchit.spv  shadow.rmiss.spv
shaders/glsl/ssprobe/: SH.glsl  anyhit.rahit  anyhit.rahit.spv  bufferreferences.glsl  closesthit.rchit  closesthit.rchit.spv  common.glsl  geometrytypes.glsl  miss.rmiss  miss.rmiss.spv  random.glsl  raygen.rgen  raygen.rgen.spv  shadow.rmiss
